--- a/server/VC++.vcxproj
+++ b/server/VC++.vcxproj
@@ -37,6 +37,10 @@
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ItemGroup>
+    <ClCompile Include="src\game\game.cpp" />
+    <ClCompile Include="src\game\gameMap.cpp" />
+    <ClCompile Include="src\game\player.cpp" />
+    <ClCompile Include="src\game\userDatabase.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\uWS\Epoll.cpp" />
     <ClCompile Include="src\uWS\Extensions.cpp" />
@@ -51,6 +55,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="src\game\game.h" />
+    <ClInclude Include="src\game\gameMap.h" />
+    <ClInclude Include="src\game\player.h" />
+    <ClInclude Include="src\game\userDatabase.h" />
+    <ClInclude Include="src\nlohmann\json.hpp" />
     <ClInclude Include="src\uWS\Asio.h" />
     <ClInclude Include="src\uWS\Backend.h" />
     <ClInclude Include="src\uWS\Epoll.h" />
