--- a/server/VC++.vcxproj.filters
+++ b/server/VC++.vcxproj.filters
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\uWS\Epoll.cpp">
       <Filter>uWS</Filter>
     </ClCompile>
@@ -31,6 +30,19 @@
     </ClCompile>
     <ClCompile Include="src\uWS\WebSocket.cpp">
       <Filter>uWS</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\game\game.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game\gameMap.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game\player.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
+    <ClCompile Include="src\game\userDatabase.cpp">
+      <Filter>game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +94,19 @@
     <ClInclude Include="src\uWS\Backend.h">
       <Filter>uWS</Filter>
     </ClInclude>
+    <ClInclude Include="src\game\game.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game\gameMap.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game\player.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game\userDatabase.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="src\nlohmann\json.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
@@ -89,6 +114,9 @@
   <ItemGroup>
     <Filter Include="uWS">
       <UniqueIdentifier>{375389fc-c670-4276-a901-778798335767}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="game">
+      <UniqueIdentifier>{d6b70b9d-5169-476a-8556-cd74a4bc7b62}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
